# viragops

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: README.md  data_sources_iuh.yaml  experiments_retrieval.yaml  ingest.yaml  litellm_config.yaml  model_gateway.yaml  optimization.yaml  prometheus.yml  prometheus_alert_rules.yml  prompts.yaml  quality_gate.yaml  retrieval.yaml
config/grafana/dashboards/: viragops_overview.json
data/eval/: error_classification_review_sample.json  eval_full_20260712_0938.csv  eval_full_20260712_1339.csv  eval_smoke_20260712_0756.csv  eval_smoke_20260712_1022.csv  eval_smoke_20260713_0517.csv  eval_smoke_20260714_0320_summary.json  eval_smoke_20260714_0817.csv  eval_smoke_20260714_0817_summary.json  eval_smoke_20260714_0827.csv  eval_smoke_20260714_0827_summary.json  eval_smoke_20260714_0835.csv  eval_smoke_20260714_0835_summary.json  eval_smoke_20260714_0844.csv  eval_smoke_20260714_0844_summary.json  eval_smoke_20260714_0852.csv  eval_smoke_20260714_0852_summary.json  eval_smoke_20260714_1403.csv  eval_smoke_20260714_1403_summary.json  eval_targeted_20260712_1008.csv  eval_targeted_20260712_1010.csv  eval_targeted_20260712_1013.csv  eval_targeted_20260712_1016.csv  eval_targeted_20260712_1344.csv  eval_targeted_20260712_1345.csv  eval_targeted_20260712_1349.csv  eval_targeted_20260714_0355.csv  eval_targeted_20260714_0355_summary.json  eval_targeted_20260714_0404.csv  eval_targeted_20260714_0404_summary.json  eval_targeted_20260714_0410.csv  eval_targeted_20260714_0410_summary.json  final_report_data.json  judge2_cache_data_20260713.json  judge_cache.json  judge_cache_data_20260712.json  judge_cache_data_20260713.json  judge_cache_model_provider_data_20260713.json  judge_cache_optimization_data_20260713.json
data/experiments/: chunking_ablation_20260711_0842.csv  chunking_ablation_20260712_0723.csv  promptcmp_20260711_1408.csv  retrieval_reranking_20260711_0852.csv  retrieval_reranking_20260712_0723.csv
data/test_sets/: golden_set.jsonl  relevant_chunks_mapping.csv  relevant_chunks_report.md
docs/: llmops_thesis_blueprint.md  sumarize.md
docs/surveys/: khao_sat_hien_trang_viragops.md
docs/system/: 00_llmops_fit_assessment.md  01_project_charter.md  02_requirements.md  03_architecture_overview.md  04_tech_stack_decisions.md  CHECKLIST_IMPLEMENTATION.md  README.md  RETROSPECTIVE.md
docs/system/contracts/: api_contracts.md  config_schemas.md  data_schemas.md  metric_definitions.md
docs/system/experiments/: data_sources_iuh.md  experiment_plan.md  golden_set_design.md  golden_set_review.md  golden_set_stats.md  result_reporting_template.md  results_chunking_ablation.md  results_context_limit_ablation.md  results_error_analysis.md  results_error_classification.md  results_evaluation_full.md  results_evaluation_smoke.md  results_evaluation_targeted.md  results_final_summary.md  results_improvement_backlog_20260714_1354.md  results_model_provider_comparison.md  results_optimization_o1_o8.md  results_prompt_comparison.md  results_prompt_comparison_p6.md  results_prompt_comparison_p8.md  results_prompt_p8_citation_multipart_v1_vs_p7.md  results_prompt_p8_p0_naive_v1.md  results_prompt_p8_p2_citation_first_v1.md  results_prompt_p8_p3_refusal_aware_v1.md  results_prompt_p8_p4_self_check_v1.md  results_prompt_p8_p5_concise_v1.md  results_quality_gate_20260713_0540.md  results_quality_gate_20260714_0320.md  (+4 more)
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
scripts/: approve_golden_set.py  calibrate_min_score.py  check_data_quality.py  check_gate.py  download_sources.py  export_ci_snapshot.py  export_improvement_backlog.py  extract_text.py  generate_demo_traffic.py  generate_final_report.py  generate_tradeoff_charts.py  golden_set_stats.py  index_all_strategies.py  ingest_data.py  init_postgres_schema.py  link_relevant_chunks.py  ocr_scanned_pdfs.py  restore_ci_snapshot.py  review_golden_set_batch.py  run_all_experiments.py  run_evaluation.py  run_experiment.py  run_experiment_error_classification.py  run_experiment_model_provider.py  run_experiment_optimization.py  run_experiment_quality_gate.py  run_prompt_comparison.py  seed_feedback_from_eval.py  seed_golden_set_iuh.py  seed_prompts.py  smoke_retrieval.py  validate_golden_set.py
sql/: schema.sql
sql/migrations/: 0001_initial_schema.sql  0002_feedback.sql
src/api/: main.py
src/common/: config_loader.py  settings.py
src/dataops/: chunker.py  embedder.py  indexer.py  metadata_extractor.py  quality_checker.py  sparse_bm25.py  version_manager.py  vietnamese_normalizer.py
src/evaluation/: golden_set.py  judge.py  metrics.py  report.py  runner.py
src/feedback/: __init__.py  backlog.py  classifier.py  clustering.py  schemas.py  store.py
src/observability/: metrics.py  tracing.py
src/optimization/: __init__.py  compression.py  routing.py  semantic_cache.py
src/promptops/: diff.py  registry.py  renderer.py  templates.py
src/qualitygate/: gate.py  report.py
src/rag/: citation.py  confidence.py  gateway_client.py  litellm_gateway.py  prompt_builder.py  schemas.py  service.py  trace_store.py
src/retrieval/: citation_matcher.py  metrics.py  reranker.py  retriever.py
tests/integration/: test_evaluation_runner.py  test_feedback_store.py  test_litellm_gateway.py  test_prompt_registry.py  test_qa_flow.py  test_semantic_cache.py
tests/unit/: test_chunker.py  test_citation_matcher.py  test_citation_parser.py  test_confidence.py  test_config_loader.py  test_evaluation_metrics.py  test_evaluation_runner_agreement.py  test_feedback_classifier.py  test_feedback_clustering.py  test_golden_set_loader.py  test_health.py  test_observability_metrics.py  test_observability_tracing.py  test_optimization_compression.py  test_optimization_routing.py  test_prompt_builder.py  test_prompt_renderer.py  test_quality_checker.py  test_quality_gate.py  test_retrieval_metrics.py  test_sparse_bm25.py  test_sparse_bm25_baseline.py  test_vietnamese_normalizer.py
(+60 files in other folders)
