[project]
name = "viragops"
version = "0.1.0"
description = "viRAGops — LLMOps/RAGOps platform for Vietnamese document QA (IUH regulations + student FAQ). Every change goes through the gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nguyen Ngoc Lan" }]

# Phase 1: chỉ giữ dependency tối thiểu cho API skeleton + config.
# Các dependency nặng (llama-index, ragas, qdrant-client, litellm...) sẽ được
# thêm ở đúng phase sử dụng chúng để môi trường luôn cài nhanh và sạch.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "rank-bm25>=0.2",   # reference BM25Okapi impl, test-only: validates src/dataops/sparse_bm25.py's formula
]
# Phase 2-3: trích xuất/làm sạch tài liệu nguồn (Module 1 DataOps).
# Cố ý tách nhóm riêng — chưa cần cho API runtime.
dataops = [
    "beautifulsoup4>=4.12",
    "pypdf>=4.3",
    "google-genai>=0.5",   # OCR PDF scan qua Gemini multimodal, xem modules/01_data_ragops.md
]
# Phase 3: chunking/embedding/indexing (Module 1 DataOps/RAGOps).
# LƯU Ý (2026-07-11): ban đầu định dùng fastembed's Qdrant/bm25 cho sparse
# vector, nhưng huggingface.co resolve-endpoint bị ISP chặn/reset kết nối
# (cùng dạng lỗi CDN đã gặp với Docker Hub CloudFront ở Phase 1) — không tải
# được model. Thay bằng BM25 tự viết (hashing-trick qua mmh3, xem
# src/dataops/sparse_bm25.py): không phụ thuộc mạng ngoài, phù hợp corpus
# nhỏ (~vài trăm chunk) của domain IUH.
ragops = [
    "qdrant-client>=1.10",   # Query API + RRF fusion server-side (khớp qdrant server v1.15.4)
    "mmh3>=4.0",              # hashing-trick cho sparse BM25 tự viết
    "tiktoken>=0.7",         # đếm token cho chunk sizing (xấp xỉ, không phải tokenizer thật của Gemini)
]
# Phase 10: tracing (Langfuse Cloud, không self-host — xem CHECKLIST Phase
# 10) + Prometheus /metrics endpoint. langfuse<4 ghim để dùng API v3 ổn định
# đã verify (start_span/start_as_current_generation) thay vì v4 mới hơn.
observability = [
    "langfuse>=3.15,<4",
    "prometheus-client>=0.20",
]
# Phase 12: biểu đồ trade-off cho báo cáo cuối — không có script vẽ biểu đồ
# nào trong repo trước đây (11 hình có sẵn ở docs/figures/ đều làm ngoài
# repo thủ công). matplotlib đơn giản, không phải hạ tầng nặng (không phải
# service Docker), chỉ dev-time.
reporting = [
    "matplotlib>=3.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
